--- a/viewer/index.html
+++ b/viewer/index.html
@@ -36,33 +36,18 @@
             var dojoConfig = {
                 async: true,
                 packages: [{
-                    name: 'viewer',
-                    location: location.pathname.replace(/[^\/]+$/, '') + 'js/viewer'
-                },{
                     name: 'config',
                     location: location.pathname.replace(/[^\/]+$/, '') + 'js/config'
                 },{
-                    name: 'widgets',
-                    location: location.pathname.replace(/[^\/]+$/, '') + 'js/widgets'
+                    name: 'cmv',
+                    location: location.pathname.replace(/[^\/]+$/, '') + 'js/cmv'
                 },{
                     name: 'dbootstrap',
                     location: location.pathname.replace(/[^\/]+$/, '') + 'js/dbootstrap'
-                }]
+                }],
+                deps: ['dbootstrap', 'cmv']
             };
         </script>
         <script type="text/javascript" src="//js.arcgis.com/3.10compact/"></script>
-        <script type="text/javascript">
-            // get the config file from the url if present
-            var file = 'config/viewer', s = window.location.search, q = s.match(/config=([^&]*)/i);
-            if (q && q.length > 0) {
-                file = q[1];
-                if(file.indexOf('/') < 0) {
-                    file = 'config/' + file;
-                }
-            }
-            require(['dbootstrap','viewer/Controller', file], function(dbootstrap, Controller, config){
-                new Controller(config);
-            });
-        </script>
     </body>
 </html>
